--- a/README.rmd
+++ b/README.rmd
@@ -182,7 +182,7 @@ We are open to collaboration on this project. If you are interested, please emai
 - [x] __Version 0.1.0__: (21 Jan 2020) Release all the basic building blocks for microsimulation modelling.
   - [x] __Version 0.1.6__: Support `mlr` in `transision()` and `TransitionClassification`.
   - [x] __Version 0.1.7 & 0.1.8__ : Introduce simpler APIs (`mutate_entity()`, `add_entity()`, `add_log()`, `transition()`) for creating simple microsimulation pipelines.
-  - [ ] __Version 0.1.9__: Support regression model creation from parameters. 
+  - [x] __Version 0.1.9__: Support regression model creation from parameters. 
   - [ ] __Version 0.1.10__: Support `mlr3` and `mlogit` model objects in the Transition classes.
   - [ ] __Version 0.1.11__: Support multiple choice models (multinomial logit models (MNL) and MNL with varying alternatives) with utility functions for sampling and simulation. This will be the last milestone for version 0.1.
 - [ ] __Version 0.2.0__: Implement model-based calibration.
