--- a/README.rmd
+++ b/README.rmd
@@ -23,6 +23,7 @@ set.seed(728)
 [![Codecov test coverage](https://codecov.io/gh/dymium-org/dymiumCore/branch/master/graph/badge.svg)](https://codecov.io/gh/dymium-org/dymiumCore?branch=master)
 [![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 <!-- [![CRAN_Download_Badge](http://cranlogs.r-pkg.org/badges/dymiumCore)](https://CRAN.R-project.org/package=dymiumCore) -->
+[![R build status](https://github.com/dymium-org/dymiumCore/workflows/R-CMD-check/badge.svg)](https://github.com/dymium-org/dymiumCore/actions)
 <!-- badges: end -->
 
 # dymiumCore
